готовое решение 3.1.3 Ля шанс Дэ Финаль

--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -29,15 +29,14 @@
 
     <label>Enter role:
         <select size="2" multiple name="roles" >
-            <option value="1">ADMIN</option>
-            <option selected="selected" value="2">USER</option>
+            <option value="1">USER</option>
+            <option selected="selected" value="2">ADMIN</option>
         </select>
     </label>
     <br>
-
+    <input type="submit" value="Update"/>
 </form>
 <br>
-<input type="submit" value="Update"/>
 <input align="right" type = "button" value = "logout"
        onclick = "window.location.href = '/logout'"/>
 </body>
